--- a/blocks/bloquesModelo/evaluacionAnteproyecto/css/estiloBloque.css
+++ b/blocks/bloquesModelo/evaluacionAnteproyecto/css/estiloBloque.css
@@ -1,27 +1,156 @@
-
-.color {
-    color: #0080c0;
-    text-decoration: none;
-    font: 18px arial, helvetica, sans-serif;
-    margin: 0 55px;
+div.campoBoton {
+	padding: -1px 30px;
+	display: inline-block;
 }
 
-#formulario{
-	padding: 0px;
+div.formulario{
+	padding: 5px;
+}
+
+#izq {
+	float: left;
+	border-radius: 5px;
+	border: 2px solid #424242;
+	-webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+	box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.75);
+	width: 48%;
+	margin-top: .5em;
+}
+
+#versiones, #revisores, #proceso, #modif {
+	float: right;
+	width: 49%;
+	text-align: justify;
+	font: 14px arial, helvetica, sans-serif;
+	border-radius: 5px;
+	border: 2px solid #424242;
+	-webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+	box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.75);
+	margin-top: .5em;
+	margin-bottom: .5em;
+	margin-left: 1em;
+	margin-right: .5em;
+}
+
+#separador {
+	border-radius: 5px;
+	border: 2px solid #424242;
+	-webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+	box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+	margin-top: .5em;
+	margin-bottom: .5em;
+	margin-left: 1em;
+	margin-right: .5em;
+}
+
+.estilo_tr {
+	border-style: solid;
+	border-color: white;
+	text-align: center;
+}
+
+.tit {
+	text-align: center;
+	color: red;
+}
+
+.res {
+	border-radius: 2px;
+	border: 1px solid gray;
+	box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.75);
+}
+
+table.dataTable tbody tr {
+	cursor: pointer;
 }
 
 form {
+	margin: 0 auto 0 auto;
 	width: 90%;
-	padding: 0px;
+}
+
+#col {
+	width: 10%;
 }
 
 body { /*font: 62.5% "Arial", sans-serif*/
-	/*font: 12px arial, helvetica, sans-serif;*/
-	/*margin: 1% 4%;*/
 	width: 100%;
-	color: #000;
-	min-width: 1000px;
-	overflow: auto;
+	border: 1px solid #EEEEEE;
+	background-color: #FFFFFF;
+	display: table;
+}
+
+.icon-max-pdf {
+	background: transparent url(../icons/app-pdf-icon.png) 50% 50% no-repeat;
+	position: relative;
+	width: 90px;
+	height: 100px;
+	text-align: center;
+	margin: 5px 0;
+	cursor: pointer;
+}
+
+.docs-anexos-icon {
+	background: transparent url(../icons/docs-anexos-icon.png) 50% 50%
+		no-repeat;
+	position: relative;
+	width: 90px;
+	height: 100px;
+	text-align: center;
+	margin: 5px 0;
+	cursor: pointer;
+}
+
+.icon-mini-archivo {
+	background: transparent url(../icons/icon-mini-archivo.png) 50% 50%
+		no-repeat;
+	position: relative;
+	width: 25px;
+	height: 25px;
+	text-align: center;
+	cursor: pointer;
+}
+
+.icon-mini-people {
+	background: transparent url(../icons/icon-mini-people.png) 50% 50%
+		no-repeat;
+	position: relative;
+	width: 25px;
+	height: 25px;
+	text-align: center;
+	cursor: pointer;
+}
+
+.bg-imagen-documento {
+	background: #fff;
+	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2)
+		inset;
+	border: 1px solid #ababab;
+	display: inline-block;
+	text-align: center;
+	cursor: pointer;
+}
+
+titulo { /* font: 24px Georgia,"Times New Roman",Times,serif; */
+	font: 22px arial, helvetica, sans-serif;
+	font-weight: bold;
+	margin: 5px 10px 5px 10px;
+	padding-bottom: 5px;
+	text-align: center;
+	/* 	border-bottom: 1px solid #5E5E5E; */
+}
+
+.pregunta {
+	text-align: center;
+	font: 14px arial, helvetica, sans-serif;
+	border-radius: 5px;
+	border: 2px solid #ffffff;
+	-webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+	box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.75);
 }
 
 h1 { /* font: 24px Georgia,"Times New Roman",Times,serif; */
@@ -44,6 +173,14 @@ h3 {
 	font: 14px arial, helvetica, sans-serif;
 	color: #18174D /*#C20000*/;
 	border-bottom: 1px dotted #aaa;
+	margin: 5px 10px;
+	padding: 2px 0;
+}
+
+h4 {
+	font: 14px arial, helvetica, sans-serif;
+	font-weight: bold;
+	color: #000000 /*#C20000*/;
 	margin: 5px 10px;
 	padding: 2px 0;
 }
@@ -107,15 +244,36 @@ b {
 .table {
 	display: table;
 	width: 85%;
-	/*font: 12px arial, helvetica, sans-serif;*/
+	font: 11.5px arial, helvetica, sans-serif;
 	border: solid 1px #ababab;
 	border-collapse: collapse;
 	text-align: left;
-	background: #fff;
+	background: #c0c0c0;
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2)
 		inset;
 	position: relative;
-	left: 25px;
+	left: 7%;
+}
+
+.table2 {
+	display: table;
+	width: 85%;
+	font: 14px arial, helvetica, sans-serif;
+	text-align: left;
+	background: #ffffff;
+	margin: 10px 10px 10px 30px;
+}
+
+.izq {
+	text-align: right;
+}
+
+.idnt {
+	margin: 10px 10px 10px 10px;
+}
+
+.idnt2 {
+	margin: 10px 10px 10px 80px;
 }
 
 .table-tittle {
@@ -174,7 +332,7 @@ tr.table-fila-body:hover {
 .canvas {
 	margin: 10px 0;
 	padding: 0;
-	/* background: #f9f9f9 url(../icons/gris-degradado-1x300.png) 0 100% repeat-x; */
+	/* background: #f9f9f9 url(images/background/gris-degradado-1x300.png) 0 100% repeat-x; */
 }
 
 .canvas-titulo {
@@ -191,7 +349,7 @@ tr.table-fila-body:hover {
 	position: relative;
 	left: 25px;
 	width: 83%;
-	background: #d4d4d4 url(../icons/gris-degradado-1x100.png) 0 0%
+	background: #d4d4d4 url(images/background/gris-degradado-1x100.png) 0 0%
 		repeat-x;
 	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2)
 		inset;
@@ -205,6 +363,22 @@ tr.table-fila-body:hover {
 	padding-left: 2px;
 }
 
+.icono-msg.error {
+	background: url(images/mensajes/cancel.png) 0 0 no-repeat;
+}
+
+.icono-msg.info {
+	background: url(images/mensajes/alert.png) 0 0 no-repeat;
+}
+
+.icono-msg.ok {
+	background: url(images/mensajes/ok.png) 0 0 no-repeat;
+}
+
+.icono-msg.default {
+	background: url(images/mensajes/alert.png) 0 0 no-repeat;
+}
+
 .content-msg {
 	margin: 5px 5px 5px 60px;
 	border: 1px solid #ccc;
@@ -213,61 +387,44 @@ tr.table-fila-body:hover {
 		inset;
 }
 
-.caja-fecha {
-    padding: 5px;
-    font-size: 12px;
+.content-msg.error {
+	background: #F1F1F1;
+	color: #18174D /*#C20000*/;
 }
 
-.caja-header {
-    margin: 2px;
+.content-msg.info {
+	background: #FAFFBD 0 0 repeat-x;
+	color: #444;
 }
 
-.bg-caja {
-    border: 1px solid #ABABAB;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2)
- inset;
-    margin: 10px;
+.content-msg.ok {
+	background: #F1F1F1;
+	color: #45881D;
 }
 
-.caja-codigo {
-    padding: 3px;
-    text-align: center;
+.content-msg.default {
+	background: #F1F1F1;
+	color: #444444;
 }
 
-.caja-icon-documento {
-    background: transparent url(../icons/icon-documento.png) 50% 0
- no-repeat;
-    position: relative;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    margin: 0;
-    cursor: pointer;
+.title-msg.error {
+	font: 16px arial, helvetica, sans-serif;
+	border-bottom: 1px dotted #777;
 }
 
-.caja-numero {
-    text-align: center;
-    font-weight: bold;
-    color: #444;
-    font-size: 12px;
+.title-msg.info {
+	font: 16px arial, helvetica, sans-serif;
+	border-bottom: 1px dotted #777;
 }
 
-.caja-info {
-    margin: 0 12px;
-    padding: 2px;
-    width: 240px;
-    overflow: hidden;
-    font-size: 12px;
+.title-msg.ok {
+	font: 16px arial, helvetica, sans-serif;
+	border-bottom: 1px dotted #777;
 }
 
-.caja {
-    position: relative;
-    display: block;
-    width: 320px;
-    height: 150px;
-    margin: 3px;
-    overflow: hidden;
-    background: #d4d4d4 url(../icons/gris-degradado-1x100.png) 0 0
- repeat-x;
-    /*cursor: pointer;*/
+.title-msg.default {
+	font: 16px arial, helvetica, sans-serif;
+	color: #000;
+	font-weight: bold;
+	border-bottom: 1px dotted #777;
 }
