--- a/blocks/bloquesModelo/consultaAnteproyecto/css/estiloBloque.css
+++ b/blocks/bloquesModelo/consultaAnteproyecto/css/estiloBloque.css
@@ -191,6 +191,7 @@ h4 {
 
 .resaltado {
 	color: #C20000;
+	font: 16px arial, helvetica, sans-serif;
 }
 
 .destacado {
@@ -345,11 +346,11 @@ tr.table-fila-body:hover {
 }
 
 .area-msg {
-	border: 1px solid #ababab;
+	border: 1px solid #18174D;
 	position: relative;
 	left: 25px;
 	width: 83%;
-	background: #d4d4d4 url(images/background/gris-degradado-1x100.png) 0 0%
+	background: #18174D url(images/background/gris-degradado-1x100.png) 0 0%
 		repeat-x;
 	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2)
 		inset;
@@ -393,7 +394,7 @@ tr.table-fila-body:hover {
 }
 
 .content-msg.info {
-	background: #FAFFBD 0 0 repeat-x;
+	background: #ffffff 0 0 repeat-x;
 	color: #444;
 }
 
