--- a/blocks/bloquesModelo/consultaInformeFinal/css/estiloBloque.css
+++ b/blocks/bloquesModelo/consultaInformeFinal/css/estiloBloque.css
@@ -3,10 +3,23 @@ div.campoBoton {
 	display: inline-block;
 }
 
+a {
+	margin: 1em 0; 
+	display: block;
+	color: #CC0000;
+}
+
+.tem {
+	border-style: hidden;
+	background-color: white;
+	color: blue;
+	margin: auto;
+	text-align: right;
+}
+
 .bg-tablero {
 	float: right;
 	width: 49%;
-	background: #fff none repeat scroll 0 0;
 	padding: 3px;
 	border-radius: 5px;
 	border: 2px solid #424242;
@@ -19,13 +32,28 @@ div.campoBoton {
 	margin-right: .5em;
 }
 
+.bg-seccion {
+	margin: 10px 0;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2)
+		inset;
+	border: 1px solid #ababab;
+}
+
+.seccion {
+	margin: 4px;
+	padding: 10px;
+	background: #f9f9f9 url(images/background/gris-degradado-1x300.png) 0
+		100% repeat-x;
+}
+
 .icon-mini-info {
-    background: transparent url("images/icons/icon-mini-info.png") no-repeat scroll 50% 50%;
-    cursor: pointer;
-    height: 25px;
-    position: relative;
-    text-align: center;
-    width: 25px;
+	background: transparent url("images/icons/icon-mini-info.png") no-repeat
+		scroll 50% 50%;
+	cursor: pointer;
+	height: 25px;
+	position: relative;
+	text-align: center;
+	width: 25px;
 }
 
 .icon-all-people {
@@ -36,7 +64,6 @@ div.campoBoton {
 	height: 100px;
 	text-align: center;
 	margin: 5px 0;
-	
 }
 
 .icon-check-list {
@@ -47,7 +74,6 @@ div.campoBoton {
 	height: 100px;
 	text-align: center;
 	margin: 5px 0;
-	
 }
 
 div.formulario {
@@ -56,27 +82,26 @@ div.formulario {
 
 #izq {
 	float: left;
+	width: 50%;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2)
+		inset;
+	border: 1px solid #ababab;
 	border-radius: 5px;
-	border: 2px solid #424242;
-	-webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-	-moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-	box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.75);
-	width: 48%;
+	background: #f9f9f9 url(images/background/gris-degradado-1x300.png) 0
+		100% repeat-x;
 	margin-top: .5em;
+	margin-bottom: .5em;
 }
 
-#versiones, #revisores, #proceso, #modif {
+#versiones, #jurados, #revisores, #proceso, #modif {
 	float: right;
 	width: 49%;
 	border-radius: 5px;
-	border: 2px solid #424242;
-	-webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-	-moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-	box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.75);
+	border: 1px solid #ababab;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2)
+		inset;
 	margin-top: .5em;
 	margin-bottom: .5em;
-	margin-left: 1em;
-	margin-right: .5em;
 }
 
 #separador {
@@ -95,6 +120,8 @@ div.formulario {
 	border-style: solid;
 	border-color: white;
 	text-align: center;
+	background: #f9f9f9 url(images/background/gris-degradado-1x300.png) 0
+		100% repeat-x;
 }
 
 .tit {
@@ -170,7 +197,8 @@ body { /*font: 62.5% "Arial", sans-serif*/
 }
 
 .bg-imagen-documento {
-	background: #fff;
+	background: #f9f9f9 url(images/background/gris-degradado-1x300.png) 0
+		100% repeat-x;
 	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2)
 		inset;
 	border: 1px solid #ababab;
