--- a/blocks/bloquesModelo/crearProgramaCurricular/css/estiloBloque.css
+++ b/blocks/bloquesModelo/crearProgramaCurricular/css/estiloBloque.css
@@ -1,4 +1,8 @@
 
+textarea {
+    border-radius: 4px;
+}
+
 form {
 	margin: 0 auto 0 auto;
 	width: 80%;
@@ -13,13 +17,19 @@ div.campoBoton {
 	width: 30%;  
 }
 
-.retraso-1{
-	-webkit-animation-delay: 1s;
-	-moz-animation-delay: 1s;
-	animation-delay: 1s;
+.seccionCentralAmpliada {
+	margin-top: 1%;
+	width: 76.5%;
 }
-.retraso-2{
-	-webkit-animation-delay: 2s;
-	-moz-animation-delay: 2s;
-	animation-delay: 2s;
+
+#crearProgramaCurricular{
+	width: 90%;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: 2%;
+}
+
+#marcoDatos{
+    margin-left: 2%;
+    width: 90%;
 }
